# google-workspace-emad

./: pyproject.toml
src/google_workspace_emad/: __init__.py  google_client.py  inference.py  register.py
src/google_workspace_emad/flows/: calendar.py  docs.py  drive.py  gmail.py  imperator.py  sheets.py  slides.py
src/google_workspace_emad/prompts/: imperator_identity.md
